--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissor</title>
 </head>
+<h>Welcome to Rock Paper Scissor</h>
+<p>Open Console to play (press F12)</p>
 <body>
     
     <script src="game.js">
